# elysian-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  dockercompose.prod.yml  nl_to_sql.html  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 767efaa6b483_initial_migration.py
app/: api.py  config.py  db.py  docs.py  main.py  models.py  services.py
tests/: conftest.py  test_execute_custom_nl_query.py  test_main.py  test_services.py
